--- a/resources/scss/custom/components.scss
+++ b/resources/scss/custom/components.scss
@@ -40,19 +40,19 @@
 @import "components/optional/dividers";
 @import "components/optional/docs";
 @import "components/optional/fancybox";
-@import "components/optional/flatpickr";
+//@import "components/optional/flatpickr";
 @import "components/optional/flickity";
 @import "components/optional/ie-fixes";
-@import "components/optional/ion-rangeslider";
+//@import "components/optional/ion-rangeslider";
 @import "components/plugins/jarallax";
-@import "components/optional/maps";
+//@import "components/optional/maps";
 @import "components/optional/modals";
 @import "components/optional/page-transitions";
 @import "components/optional/pagination";
-@import "components/optional/plyr";
+//@import "components/optional/plyr";
 @import "components/optional/pricing";
-@import "components/optional/prism";
+//@import "components/optional/prism";
 @import "components/optional/side-menu";
 @import "components/optional/tabs";
 @import "components/optional/tooltips";
-@import "components/optional/twitterfetcher";
+//@import "components/optional/twitterfetcher";
