--- a/resources/scss/admin.scss
+++ b/resources/scss/admin.scss
@@ -25,7 +25,7 @@ html {
 }
 
 .custom-input {
-    @apply shadow appearance-none bg-gray-100 text-gray-700 border border-gray-200 rounded w-full py-2 px-3 leading-tight focus:outline-none focus:border-green-500 focus:bg-white;
+    @apply shadow appearance-none mt-4 bg-gray-100 text-gray-700 border border-gray-200 rounded w-full py-2 px-3 leading-tight focus:outline-none focus:border-green-500 focus:bg-white;
 }
 
 #postEditor {
